objects/CustomObject1__c.object
<CustomObject>
    <description>削除対象Object ※本体号機と統合
本体号機番号を入力</description>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>作業完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delta_Ver__c</fullName>
        <description>Deltaのバージョン</description>
        <inlineHelpText>DeltaのVerを選択して下さい。</inlineHelpText>
        <label>Delta_Ver</label>
        <picklist>
            <picklistValues>
                <fullName>5.x.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.x.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EF_date__c</fullName>
        <description>EF期間満了日を入力します。</description>
        <inlineHelpText>EF期間満了日を入力します。</inlineHelpText>
        <label>EF期間満了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EF_longdate__c</fullName>
        <description>EF延長理由を記載します。</description>
        <inlineHelpText>EF延長理由EF延長理由を記載します。</inlineHelpText>
        <label>EF延長理由</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERP廃棄登録</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field103__c</fullName>
        <description>8行以内に入力して下さい。</description>
        <inlineHelpText>8行以内に入力して下さい。</inlineHelpText>
        <label>本体構成情報10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>リース満了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field113__c</fullName>
        <description>8行以内に入力して下さい。</description>
        <inlineHelpText>8行以内に入力して下さい。</inlineHelpText>
        <label>本体構成情報11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gas_supplier__c</fullName>
        <label>ガス業者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>He_fill_date__c</fullName>
        <label>He最終充填日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>He_lasting_date__c</fullName>
        <label>最大保持日数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>He_level__c</fullName>
        <label>Heレベル</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>He_level_after_refill__c</fullName>
        <label>Heレベル（充填後）</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>He_level_date__c</fullName>
        <label>Heレベル確認日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>He_level_minimum__c</fullName>
        <label>Heレベル（下限界)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>He_note__c</fullName>
        <description>備考欄です</description>
        <label>状況</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>He_refill_amount__c</fullName>
        <label>He充填量(L)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>He_refill_next_date__c</fullName>
        <label>He充填予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Iten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>移転</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kaitai__c</fullName>
        <defaultValue>false</defaultValue>
        <label>解体</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keiretu__c</fullName>
        <description>装置の系列情報</description>
        <label>系列</label>
        <picklist>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kousei_all_1__c</fullName>
        <formula>Field13__c &amp;  BR()  &amp; Field23__c  &amp;  BR()  &amp;  Field33__c  &amp;  BR() &amp;  Field43__c &amp;  BR()  &amp; Field53__c &amp;  BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体構成情報1(全体)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kousei_all_2__c</fullName>
        <formula>Field63__c &amp;  BR() &amp; Field73__c &amp;  BR() &amp; Field83__c &amp;  BR()  &amp;  Field93__c &amp;  BR()  &amp; Field103__c &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体構成情報2(全体)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kousei_all_3__c</fullName>
        <formula>Field113__c &amp;  BR()  &amp;  Field123__c  &amp; BR() &amp; Field133__c &amp; BR() &amp; Field143__c &amp; BR() &amp; Field153__c  &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体構成情報3(全体)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Goki__c</fullName>
        <label>新号機No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>リユース</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCM__c</fullName>
        <label>SCMタイプ</label>
        <picklist>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCM_manufacturer__c</fullName>
        <label>SCMメーカー</label>
        <picklist>
            <picklistValues>
                <fullName>JEOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JASTEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OXFORD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVC_Tantou__c</fullName>
        <description>サービス担当者</description>
        <inlineHelpText>装置のサービス担当者</inlineHelpText>
        <label>SVC担当</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shouzi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>消磁</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_buhin10__c</fullName>
        <label>出荷済部品</label>
        <picklist>
            <picklistValues>
                <fullName>有り</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無し</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>回転</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>配布済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_buhin1__c</fullName>
        <label>出荷済部品</label>
        <picklist>
            <picklistValues>
                <fullName>有り</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無し</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>回転</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>配布済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_buhin2__c</fullName>
        <label>出荷済部品</label>
        <picklist>
            <picklistValues>
                <fullName>有り</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無し</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>回転</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>配布済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_bunrui10__c</fullName>
        <label>出荷済分類</label>
        <picklist>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_bunrui1__c</fullName>
        <description>出荷済分類</description>
        <label>出荷済分類</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_bunrui2__c</fullName>
        <label>出荷済分類</label>
        <picklist>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_date10__c</fullName>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_date1__c</fullName>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_date2__c</fullName>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_naiyo10__c</fullName>
        <label>出荷済工事内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_naiyo1__c</fullName>
        <description>出荷済工事内容</description>
        <label>出荷済工事内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_naiyo2__c</fullName>
        <label>出荷済工事内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_seibann10__c</fullName>
        <label>出荷済製番</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_seibann1__c</fullName>
        <description>出荷済製番</description>
        <label>出荷済製番</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyuxtukaSUMI_seibann2__c</fullName>
        <label>出荷済製番</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>本体番号</label>
    <nameField>
        <label>本体番号名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>